--- a/Project.html
+++ b/Project.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 
-    <h1><u>To-Do List</u></h1>
+    <h1>To-Do List</h1>
 
     <div class="content">
 
         <form id="add-list-form">
             <input type="text" name="task" placeholder="Task">
-            <button>Add Task</button>
-        </form>
-
+            <button>+ Add Task</button>
+        </form> <br>
+      </div>
         <ul id="todo-list"></ul>
 
-    </div>
+    
 
 
 
