--- a/meetings.html
+++ b/meetings.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-    <h1><u>Meetings</u></h1>
+    <h1>Meetings</h1>
 
     <div class="content">
 
         <form id="add-meetings-form">
             <input type="text" name="name" placeholder="name">
             <input type="datetime-local" name="date" placeholder="date">
-            <button>Add Meeting</button>
+            <button>+ Add Meeting</button>
         </form>
-
+      </div>
         <ul id="meetings"></ul>
 
-    </div>
+    
 
 
 
