--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
 
     </head>
         <body>
+             <div class="cen">
             <h1>Day Planner</h1>
 
-            <div class="flex-container">
-                <div class="flex-child">
+            <div class="">
+                <div class="">
            <h2 align="center"><a href="Project.html">
-                <img alt="To-Do List" src="img3.jpg"
+            <img alt="" src="img5.png"
                 width="300" height="300"><br>To-Do List
              </a> </h2>
              </div>
              
-             <div class="flex-child">
+             <div class="">
              <h2 align="center"><a href="meetings.html">
-                <img alt="Meetings" src="img4.jpg"
+                <img alt="Meetings" src="img9.png"
                 width="300" height="300"><br>Meetings
              </a><br></h2>
 
              </div>
             </div>
-
+         </div>
 
 
 
