--- a/meetings.html
+++ b/meetings.html
@@ -5,6 +5,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
     <link rel="stylesheet" href="style1.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
 <body>
 
@@ -13,9 +14,9 @@
     <div class="content">
 
         <form id="add-meetings-form">
-            <input type="text" name="name" placeholder="name">
-            <input type="datetime-local" name="date" placeholder="date">
-            <button>+ Add Meeting</button>
+            <input type="text"  class="test" name="name" placeholder="name" required>
+            <input type="datetime-local" class="test" name="date" placeholder="date" required>
+            <button>+</button>
         </form>
       </div>
         <ul id="meetings"></ul>
